--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
     <body>
-    
+
         <div class="slider">
             <div class="slider__item">
                 <img src="./assets/img/img1.jpg" alt="1" width="440px" height="300px">
@@ -24,8 +24,10 @@
             </div>
         </div>
 
+
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
         <script src="./assets/js/slick.min.js"></script>
-        <script src="./assets/js/main.js"></script>
+        <!-- <script src="./assets/js/main.js"></script> -->
+        <script src="./assets/js/app.js"></script>
     </body>
 </html>
